homePage set up with fragment + components

--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -4,7 +4,7 @@
 
 // Components
 
-.homepage, .navbar-container, .splash-container, .about-container, .action-buttons, .schedule-container, .day-container, .form-container, .sponsor-container {
+.page-container, .homepage, .navbar-container, .splash-container, .about-container, .action-buttons, .schedule-container, .day-container, .form-container, .sponsor-container {
     display: flex;
     flex-direction: column;
 }
