--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,9 +4,14 @@
 
 // Components
 
-.page-container, .homepage, .navbar-container, .splash-container, .about-container, .action-buttons, .schedule-container, .day-container, .form-container, .sponsor-container {
+.coming-soon-container, .page-container, .homepage, .navbar-container, .splash-container, .about-container, .action-buttons, .schedule-container, .day-container, .form-container, .sponsor-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.coming-soon-container {
+
 }
 
 .navbar-container {
