--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -55,14 +55,14 @@ table {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 100%;
+    min-width: 100vw;
 }
 
 .row {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    max-width: 100%;
+    min-width: 100vw;
 }
 
 // Colors
@@ -86,7 +86,6 @@ $color5: #5283C7;
     h1, h2, h3 {
         color: white;
         padding: 1vw;
-        font-size: larger;
     }
     .coming-soon-content {
         @extend .column;
@@ -99,8 +98,21 @@ $color5: #5283C7;
     }
     background-color: $color2;
     max-width: 60vw;
-    margin: 0vw 20vw 0vw;
+    margin: 5vw 20vw 0vw;
+    padding: 10vh 0vw 20vh;
     justify-content: center;
+}
+
+.coming-soon-header {
+    font-size: 2.5vw;
+}
+
+.coming-soon-date, .coming-soon-detail {
+    font-size: 2vw;
+}
+
+.coming-soon-content-title {
+    font-size: 4vw;
 }
 
 // Navbar
