--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -357,7 +357,7 @@ $color8: #10213a;
 // Schedule / Day of Activities
 .schedule-container {
     @extend .column;
-    justify-content: flex-start;
+    justify-content: center;
     min-height: 100vh;
     padding: 5vw 0vw 0vw;
     background-image: url('../images/teamwork.jpg');
@@ -383,19 +383,21 @@ $color8: #10213a;
 }
 
 .header-text {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
     color: $color6;
     padding: 1vh;
 }
 
 .day-content {
-    padding: 0.5vh 0vw 0vh;
+    padding: 1rem;
+    margin: 0rem 0rem 0.5rem;
     z-index: 2;
 }
 
 .event-name {
     font-size: 1.5rem;
+    color: $color7;
     padding: 0vh 0vw 1vh;
 }
 
@@ -406,23 +408,48 @@ $color8: #10213a;
     padding: 1vh;
 }
 
+.event-action-row {
+    @extend .row;
+    justify-content: flex-end;
+}
+
+.event-action-column {
+    @extend .column;
+}
+
+.event-action-button-row {
+    @extend .action-button-row;
+    padding: 0;
+}
+
+.event-action-button {
+    @extend .action-button;
+    padding: 0.5rem;
+    margin: 0;
+}
+
+.event-action-button-text {
+    font-size: 1.25rem;
+    color: $color6;
+}
+
 .panel3 {
     position: relative;
-    top: -43vh;
+    top: -53vh;
     background-color: $color2;
     opacity: 0.2;
     min-height: 60vh;
-    width: 48vh;
+    width: 47vh;
     z-index: 1;
 }
 
 .panel4 {
     position: relative;
-    top: -31vh;
+    top: -27.5vh;
     background-color: $color2;
     opacity: 0.2;
     min-height: 40vh;
-    min-width: 48vh;
+    min-width: 42vh;
     z-index: 1;
 }
 
