--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -102,6 +102,11 @@ $color6: #eff5ff;
 $color7: #101316;
 $color8: #10213a;
 
+// Links
+a {
+    text-decoration: none;
+}
+
 // Components
 .coming-soon-container, .page-container, .homepage, .navbar-container, .splash-container, .about-container, .action-buttons, .schedule-container, .day-container, .form-container, .sponsor-container {
     display: flex;
